deploy/magento/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento-app
  namespace: magento
  labels:
    app: magento-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento-app
  template:
    metadata:
      labels:
        app: magento-app
    spec:
      containers:
      - name: magento
        image: 295038636998.dkr.ecr.us-west-2.amazonaws.com/ecp-cafe/tony:magento2.3.4-11
        volumeMounts:
        - name: magento-app-stroage
          mountPath: /magento
      - name: magento-nginx
        image: magento/magento-cloud-docker-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: magento-nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: magento-nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: vhost.conf
        - name: magento-app-stroage
          mountPath: /magento
      volumes:
      - name: magento-app-stroage
        emptyDir: {}
      - name: magento-nginx-config
        configMap:
          name: magento-nginx-config
