deploy/magento/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento-app
  namespace: magento
  labels:
    app: magento-app
spec:
  selector:
    app: magento-app
  ports:
  - name: magento-nginx-port
    port: 80
    protocol: TCP
  type: NodePort
